--- a/Passphrase Generator/Base.lproj/Main.storyboard
+++ b/Passphrase Generator/Base.lproj/Main.storyboard
@@ -727,10 +727,10 @@
                                 </connections>
                             </button>
                             <textField toolTip="Bits of entropy" horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xKV-o1-H7b">
-                                <rect key="frame" x="18" y="232" width="13" height="16"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="0" id="sr7-wN-y8r">
+                                <rect key="frame" x="18" y="232" width="29" height="16"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="10.0" placeholderString="10.0" id="sr7-wN-y8r">
                                     <font key="font" usesAppearanceFont="YES"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="textColor" name="tertiaryLabelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
@@ -870,7 +870,7 @@ DQ
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="280"/>
+            <point key="canvasLocation" x="74.5" y="280"/>
         </scene>
     </scenes>
 </document>
