--- a/Passphrase Generator/Base.lproj/Main.storyboard
+++ b/Passphrase Generator/Base.lproj/Main.storyboard
@@ -690,7 +690,7 @@
                         <subviews>
                             <textField toolTip="Passphrase preview" verticalHuggingPriority="750" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fPQ-k5-dkj">
                                 <rect key="frame" x="20" y="201" width="441" height="21"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="Hello World!" drawsBackground="YES" id="ZXB-Ht-NjR">
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="Hello World!" drawsBackground="YES" id="ZXB-Ht-NjR">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -730,7 +730,7 @@
                                 <rect key="frame" x="18" y="232" width="29" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="10.0" placeholderString="10.0" id="sr7-wN-y8r">
                                     <font key="font" usesAppearanceFont="YES"/>
-                                    <color key="textColor" name="tertiaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="textColor" name="quaternaryLabelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
@@ -870,7 +870,7 @@ DQ
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="74.5" y="280"/>
+            <point key="canvasLocation" x="65.5" y="262"/>
         </scene>
     </scenes>
 </document>
